Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84474

When the system time zone is set to be BST then it will end up giving a time that is not correct when converted from QTime(0,0,0) or QTime(2,0,0)

    XMLWordPrintable

Details

    • 13
    • 510253aa0996a89e6029d244002a08615b2fb65b (qt/qtdeclarative/dev) a4e5f82186d11f7a4dcd32f74d5efd3f131a627f (qt/qtdeclarative/5.15)

    Description

      When the system time zone is set to be BST then it will end up giving a time that is not correct when converted from QTime(0,0,0) or QTime(2,0,0). What happens is that it will end up being off by one hour as it seems to be accounting for the daylight savings, but this only happens with using BST and also at least not on Windows.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ulherman Ulf Hermann
              andysh Andy Shaw
              Maurice Kalinowski Maurice Kalinowski
              Alex Blasche Alex Blasche
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes