qv4dateobject.cpp: USE_QTZ_SYSTEM_TIMEZONE on more platforms

The only platform where we may have a semi-adequate native
implementation of the time/date functions is windows. On all other
platforms we should use QTimeZone::systemTimeZone() if possible as that
at least gives us correct results when the system time zone doesn't
change at runtime.

Fixes: QTBUG-84474
Pick-to: 5.15
Change-Id: I34b01e12a751ee1c9b17735810e62e2e847f8446
Reviewed-by: Lars Knoll <lars.knoll@qt.io>